Fix move_to drop down. Was trying to handle two move drop downs on the same screen via some inline JavaScript that actually only fired on change, but the drop down had a sensible default so was not actually being changed.

--- a/app/views/stories/_move_stories_form.rhtml
+++ b/app/views/stories/_move_stories_form.rhtml
@@ -5,9 +5,8 @@
   <% end %>
 
   <% collection_content(iterations) do %>
-    <%= hidden_field_tag :move_to %>
     Move Selected Story Cards to:
-    <%= select_tag selected_id, iteration_select_list_for(iterations, default), :onchange => "$('move_to').value = this.value" %>
+    <%= select_tag "move_to", iteration_select_list_for(iterations, default) %>
     <%= submit_tag "Go" %>
   <% end %>
 </div>
